# polars-dates

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo.toml  pyproject.toml
.github/workflows/: CI.yml  main.yml
polars_dates/: __init__.py  functions.py  namespace.py
polars_geodates/: __init__.py  functions.py  namespace.py
src/: dateconversions.rs  expressions.rs  lib.rs
tests/: requirements.txt  test_conversions.py
