[package]
name = "polars_dates"
version = "0.11.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html.
[lib]
name = "polars_dates"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-polars = { version = "0.8.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.31", default-features = false, features = ["std", "unstable-locales"] } 
chrono-tz = "0.8.5"
polars = { version = "=0.34.2", features = ["strings", "dtype-date", "dtype-struct"], default-features = false }
polars-core = { version = "=0.34.2", default-features = false }
polars-time = { version = "=0.34.2", features = ["timezones"], default-features = false }
polars-ops = { version = "=0.34.2", default-features = false }
polars-arrow = { version = "=0.34.2", default-features = false }
lazy_static = "1.4.0"
tzf-rs = "0.4.5"
rayon = {version = "1.7"}
ordered-float = "4.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
