[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=0.20.0"]
build-backend = "maturin"

[project]
name = "polars-dates"
description = "Validation routines for Polars"
readme = "README.md"
authors = [
  { name="Hugo Pendlebury" },
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.19.12"
requires-python = ">=3.8"

[tool.maturin]
module-name = "polars_dates._internal"
