[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=0.19.2"]
build-backend = "maturin"

[project]
name = "polars_geodates"
description = "Converts from onetime to another based on latatitude and longitude"
readme = "README.md"
authors = [
  { name="Hugo Pendlebury" },
]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.19.12"
requires-python = ">=3.8"

[tool.maturin]
module-name = "polars_geodates._internal"
